

Directory modules/apps/examples/sata_to_pcie
 sata_to_pcie.bsv          Locally Modified           20 

Interface change to mkSizedBRAMFIFO().

----------
mcadler     Date: Fri Feb 17 00:06:59 EST 2012  CSN: CSN-leap-examples-22
                  Fri Feb 17 05:06:59 UTC 2012


Directory config/pm/leap/examples
 stdio/                    Locally Added               0 

Directory config/pm/leap/examples/stdio
 stdio_example_hybrid_exe.apm Locally Added               0 

Directory modules/apps/examples
 stdio/                    Locally Added               0 

Directory modules/apps/examples/stdio
 stdio-example.awb         Locally Added               0 
 stdio-example.bsv         Locally Added               0 
 README                    Locally Added               0 

Relatively simple example of writing and reading using StdIO.

----------
mcadler     Date: Fri Feb 17 08:17:01 EST 2012  CSN: CSN-leap-examples-23
                  Fri Feb 17 13:17:01 UTC 2012


Directory modules/apps/examples/stdio
 stdio-example.bsv         Locally Modified           22 

Get rid of compiler warnings.

----------
mcadler     Date: Sun Jul 29 14:33:02 EDT 2012  CSN: CSN-leap-examples-24
                  Sun Jul 29 18:33:02 UTC 2012


Directory modules/apps/examples/rrrtest
 rrrtest.h                 Locally Modified           23 

Update for new --help argument interface.

----------
kfleming    Date: Tue Oct  9 20:00:27 EDT 2012  CSN: CSN-leap-examples-27
                  Wed Oct 10 00:00:27 UTC 2012


Directory config/pm/leap/examples/rrrtest
 rrrtest_hybrid_ml605_pcie.apm Locally Modified           26 


Correct reset for rrrtest on ML605

----------
mcadler     Date: Mon Oct 29 09:52:44 EDT 2012  CSN: CSN-leap-examples-28
                  Mon Oct 29 13:52:44 UTC 2012


Directory config/pm/leap/examples/rrrtest
 rrrtest_hybrid_ml605_pcie.apm Locally Modified           27 

- 85MHz model clock
- Use FPGA environment without central cache for faster compilation